--- a/how-to-elk-stack/config-files/filebeat.geth.mlog.json.yml
+++ b/how-to-elk-stack/config-files/filebeat.geth.mlog.json.yml
@@ -32,7 +32,20 @@ output.logstash:
 #   # registry maintenance
 #   close_inactive: "4h"
 #   close_renamed: true
-#   clean_inactive: true
+#   cleatheln_inactive: true
 #   clean_removed: true
 #   # start reading at bottom, not top
 #   tail_files: true
+
+
+# $ filebeat -e -path.config=. -c /Users/stev/Documents/GitHub/how-to-ethereum-classic/how-to-elk-stack/config-files/filebeat.geth.mlog.json.yml -d "publish"
+#
+# /private/etc/filebeat_geth_mlog/filebeat.geth.mlog.json.yml
+#
+# chmod go-w /private/etc/filebeat_geth_mlog/filebeat.geth.mlog.json.yml
+#
+# $ filebeat -e -path.config=. -c /private/etc/filebeat_geth_mlog/filebeat.geth.mlog.json.yml -d "publish"
+#
+# chown root /private/etc/filebeat_geth_mlog/filebeat.geth.mlog.json.yml
+#
+# $ logstash -f /Users/stev/Documents/GitHub/how-to-ethereum-classic/how-to-elk-stack/config-files/ls-pipeline-json.conf --config.reload.automatic
